--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,11 @@ img {
   padding: 15px 0;
 }
 
+.preco-item a:hover {
+  transition: 0.6s;
+  color: #2c70ff;
+}
+
 @media (max-width: 800px) {
   .preco {
     padding-left: 10px;
@@ -276,4 +281,146 @@ img {
   .preco .preco-item:nth-child(1) {
     order: -1;
   }
+}
+
+.qualidade {
+  max-width: 960px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.qualidade-item {
+  flex: 1 1 300px;
+  margin: 20px 10px;
+}
+
+.qualidade-item h2 {
+  font-size: 2.25em;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.qualidade-item h2::before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 10px;
+  background: blue;
+}
+
+.qualidade-item:nth-last-of-type(3n + 1) h2::before {
+  background-color: #ae81ff;
+}
+
+.qualidade-item:nth-last-of-type(3n + 2) h2::before {
+  background-color: #f9265e;
+}
+
+.qualidade-item:nth-last-of-type(3n + 3) h2::before {
+  background-color: #66d9eb;
+}
+
+.qualidade-item p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  color: #7c7c7c;
+}
+
+/* NewsLetter */
+
+.newsletter {
+  background-color: #f7f7f7;
+  padding: 60px calc((100% - 960px) / 2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newletter-info {
+  flex: 1 1 240px;
+  margin: 0 10px;
+}
+
+.newletter-info h1 {
+  font-size: 3em;
+  color: #a4a4a4;
+}
+
+.newletter-info p {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 230px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 260px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-form input {
+  flex: 3 260px;
+  font-size: 1.25em;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+  border: 4px solid #2c07ff;
+  background-color: transparent;
+  padding: 15px 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 260px;
+  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+  font-style: 2.25em;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: #2c07ff;
+  color: white;
+  margin: 0px;
+  cursor: pointer;
+  border: 0px;
+  padding: 15px 10px;
+}
+
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 1.5em;
+  }
+}
+
+/* footer */
+
+.footer {
+  display: flex;
+  background-color: #2c07ff;
+  height: 200px;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 2.25em;
+  color: #122ab2;
+}
+
+/* JS */
+.js-scroll {
+  opacity: 0;
+  transition: 0.3s;
+  transform: translate3d(-30px, 0, 0);
+}
+
+.js-scroll.animate {
+  opacity: 1;
+  transition: 0.3s;
+  transform: translate3d(0, 0, 0);
 }
